[gd_scene format=3 uid="uid://dcpomycyiwcvs"]

[ext_resource type="Texture2D" uid="uid://eksyq7urw0ss" path="res://Assets/flat.png" id="1"]
[ext_resource type="Texture2D" uid="uid://c1gfsa8y7kn41" path="res://Assets/sharp.png" id="2"]
[ext_resource type="Texture2D" uid="uid://mh7wfwqoh6f1" path="res://Assets/semibreve.png" id="3"]
[ext_resource type="Script" uid="uid://brohufv81hik0" path="res://Scripts/UI/NoteView.gd" id="4"]
[ext_resource type="Material" uid="uid://bfff7jdte2w75" path="res://Shaders/Note.tres" id="5"]

[sub_resource type="Animation" id="1"]
resource_name = "hit"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NoteSprite:material:shader_param/strength")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(4.75683, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NoteSprite:material:shader_param/u_replacement_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.223529, 0.47451, 0.945098, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"die"
}]
}

[sub_resource type="Animation" id="2"]
resource_name = "miss"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NoteSprite:material:shader_param/strength")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(4.75683, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NoteSprite:material:shader_param/u_replacement_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.00784314, 0.00784314, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:shake_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.07, 0.12, 0.19),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 30.0, -30.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i3jxm"]
_data = {
&"hit": SubResource("1"),
&"miss": SubResource("2")
}

[node name="Note" type="Node2D" unique_id=1349560790]
scale = Vector2(0.09, 0.09)
script = ExtResource("4")

[node name="NoteSprite" type="Sprite2D" parent="." unique_id=506401085]
material = ExtResource("5")
texture = ExtResource("3")

[node name="FlatSprite" type="Sprite2D" parent="." unique_id=206232640]
visible = false
position = Vector2(-288, -80)
scale = Vector2(2.09836, 1.99005)
texture = ExtResource("1")

[node name="SharpSprite" type="Sprite2D" parent="." unique_id=1537438250]
visible = false
position = Vector2(-272, 0)
scale = Vector2(2.22951, 2.22951)
texture = ExtResource("2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1997121146]
libraries/ = SubResource("AnimationLibrary_i3jxm")
